panel heading styles custom-time z-index fix TimeT:updateToday $to fix TimeT:updateCustom Helpers:dayDiff timeProject timeItems related fix timeProject:processTimeIntervals - added 1 day to $to timeProject:getCustom signature fix timeProject:get[Interval] refresh false def Panel $user.name echoed Panel:time time.calendar tip click timeProjectLoop fix adding seconds to custom update custom AJAX JS sf

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,15 @@
   left: 150px;
 }
 
+.p-heading>span {
+  display: inline-block;
+}
+
+.p-heading .welcome {
+  width: 210px;
+  margin-right: 30px;
+}
+
 .p-heading {
   padding: 8px;
   background: rgb(245, 244, 255);
@@ -198,7 +207,7 @@ li.project > .controls {
   width: 35px;
 }
 
-li.project.header .time.calendar i {
+li.project.header .time.calendar i, li.project.header .time.calendar .tip{
   cursor: pointer;
 }
 
@@ -270,6 +279,7 @@ li.project .time {
   /*display: block;*/
   background: #C3D9FF;
   box-shadow: 0 0 0px 2px #c3d9ff;
+  z-index: 2;
 }
 
 .date-box {
@@ -346,3 +356,4 @@ div#flash_popup.error {
   width: 15px;
   overflow: visible;
 }
+
